force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Account__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Lookup Field.</description>
    <inlineHelpText>Account Lookup Field.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ZoomInfo Records</relationshipLabel>
    <relationshipName>ZoomInfo_Records</relationshipName>
    <type>Lookup</type>
</CustomField>