force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__All_Industries__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__All_Industries__c</fullName>
    <description>Comma-separated list of all industries that ZoomInfo has on the company.</description>
    <inlineHelpText>Comma-separated list of all industries that ZoomInfo has on the company.</inlineHelpText>
    <label>All Industries</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>