force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__All_Investors__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__All_Investors__c</fullName>
    <description>List of organizations that invested in the company.</description>
    <inlineHelpText>List of organizations that invested in the company.</inlineHelpText>
    <label>All Investors</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>