force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Calculated_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Calculated_Job_Function__c</fullName>
    <description>Inferred job function based on the title input parameter.</description>
    <inlineHelpText>Inferred job function based on the title input parameter.</inlineHelpText>
    <label>Calculated Job Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>