force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Certification_Date__c</fullName>
    <description>Last time we either saw email activity or manually confirmed company is in business.</description>
    <inlineHelpText>Last time we either saw email activity or manually confirmed company is in business.</inlineHelpText>
    <label>Certification Date</label>
    <type>DateTime</type>
</CustomField>