force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Certified_Active_Company__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Certified_Active_Company__c</fullName>
    <description>Yes or no value which denotes if ZoomInfo&apos;s research and data team has confirmed activity within the past 12 months.</description>
    <inlineHelpText>Yes or no value which denotes if ZoomInfo&apos;s research and data team has confirmed activity within the past 12 months.</inlineHelpText>
    <label>Certified Active Company</label>
    <length>10</length>
    <type>Text</type>
</CustomField>