force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Company_City__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Company_City__c</fullName>
    <description>City of the company&apos;s primary address.</description>
    <inlineHelpText>City of the company&apos;s primary address.</inlineHelpText>
    <label>Company City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>