force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Company_Description__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Company_Description__c</fullName>
    <description>Description associated with the company.</description>
    <inlineHelpText>Description associated with the company.</inlineHelpText>
    <label>Company Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>