force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Company_LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Company_LinkedIn_URL__c</fullName>
    <description>URL of the company profile within LinkedIn.</description>
    <inlineHelpText>URL of the company profile within LinkedIn.</inlineHelpText>
    <label>Company LinkedIn URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>