force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Company_Name__c</fullName>
    <description>Name of the company.</description>
    <inlineHelpText>Name of the company.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>