force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Company_Phone__c</fullName>
    <description>Primary phone number of the company.</description>
    <inlineHelpText>Primary phone number of the company.</inlineHelpText>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>