force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Company_Street__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Company_Street__c</fullName>
    <description>Street of the company&apos;s primary address.</description>
    <inlineHelpText>State of the company&apos;s primary address.</inlineHelpText>
    <label>Company Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>