force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Company_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Company_Zip_Code__c</fullName>
    <description>Zip code of the company&apos;s primary address.</description>
    <inlineHelpText>Zip code of the company&apos;s primary address.</inlineHelpText>
    <label>Company Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>