force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Company_ZoomInfo_URL__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Company_ZoomInfo_URL__c</fullName>
    <description>URL to the company profile in ZoomInfo.</description>
    <inlineHelpText>URL to the company profile in ZoomInfo.</inlineHelpText>
    <label>Company ZoomInfo URL</label>
    <type>Url</type>
</CustomField>