force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Contact__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Lookup Field.</description>
    <inlineHelpText>Contact Lookup Field.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ZoomInfo Records</relationshipLabel>
    <relationshipName>ZoomInfo_Records</relationshipName>
    <type>Lookup</type>
</CustomField>