force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Contact_Accuracy_Grade__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Contact_Accuracy_Grade__c</fullName>
    <description>Grade indicating the likelihood that a contact is reachable and still employed by the company listed.</description>
    <inlineHelpText>Grade indicating the likelihood that a contact is reachable and still employed by the company listed.</inlineHelpText>
    <label>Contact Accuracy Grade</label>
    <length>5</length>
    <type>Text</type>
</CustomField>