force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Contact_State__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Contact_State__c</fullName>
    <description>A person&apos;s state based on their personal location.</description>
    <inlineHelpText>A person&apos;s state based on their personal location.</inlineHelpText>
    <label>Contact State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>