force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Contact_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Contact_Zip_Code__c</fullName>
    <description>A person&apos;s zip code based on their personal location.</description>
    <inlineHelpText>A person&apos;s zip code based on their personal location.</inlineHelpText>
    <label>Contact Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>