force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Department__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Department__c</fullName>
    <description>Department employee is associated with.</description>
    <inlineHelpText>Department employee is associated with.</inlineHelpText>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>