force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Direct_Phone__c</fullName>
    <description>Person direct business phone number.</description>
    <inlineHelpText>Person direct business phone number.</inlineHelpText>
    <label>Direct Phone</label>
    <type>Phone</type>
</CustomField>