force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Email_Address__c</fullName>
    <description>Person business email address.</description>
    <inlineHelpText>Person business email address.</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>