force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Email_Matches_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Email_Matches_Company_Name__c</fullName>
    <description>Indicates if ZoomInfo recognizes a match between the email domain input value and known domains for the company.</description>
    <inlineHelpText>Indicates if ZoomInfo recognizes a match between the email domain input value and known domains for the company.</inlineHelpText>
    <label>Email Matches Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>