force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Employee_Range__c</fullName>
    <description>Approximate range for the number of contacts employed by the company.</description>
    <inlineHelpText>Approximate range for the number of contacts employed by the company.</inlineHelpText>
    <label>Employee Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>