force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Facebook_Followers__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Facebook_Followers__c</fullName>
    <description>Number of Facebook followers.</description>
    <inlineHelpText>Number of Facebook followers.</inlineHelpText>
    <label>Facebook Followers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>