force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__First_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__First_Name__c</fullName>
    <description>First name of person.</description>
    <inlineHelpText>First name of person.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>