force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Funding_Rounds__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Funding_Rounds__c</fullName>
    <description>List of funding rounds including date, type and amount.</description>
    <inlineHelpText>List of funding rounds including date, type and amount.</inlineHelpText>
    <label>Funding Rounds</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>