force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Generic_Email__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Generic_Email__c</fullName>
    <description>Indicates if ZoomInfo recognizes email input value as a role based username.</description>
    <inlineHelpText>Indicates if ZoomInfo recognizes email input value as a role based username.</inlineHelpText>
    <label>Generic Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>