force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__HR_Department_Budget__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__HR_Department_Budget__c</fullName>
    <description>Approximate budget of the company&apos;s HR department.</description>
    <inlineHelpText>Approximate budget of the company&apos;s HR department.</inlineHelpText>
    <label>HR Department Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>