force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Industry__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Industry__c</fullName>
    <description>Specific industry information.</description>
    <inlineHelpText>Specific industry information.</inlineHelpText>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>