force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Job_Function__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Job_Function__c</fullName>
    <description>A person&apos;s organizational job function.</description>
    <inlineHelpText>A person&apos;s organizational job function.</inlineHelpText>
    <label>Job Function</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>