force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Job_Title__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Job_Title__c</fullName>
    <description>Persons current job title.</description>
    <inlineHelpText>Persons current job title.</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>