force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Last_Funding_Round_Amount__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Last_Funding_Round_Amount__c</fullName>
    <description>Amount of Last funding round.</description>
    <inlineHelpText>Amount of Last funding round.</inlineHelpText>
    <label>Last Funding Round Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>