force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Last_Funding_Round_Date__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Last_Funding_Round_Date__c</fullName>
    <description>Date of last funding round.</description>
    <inlineHelpText>Date of last funding round.</inlineHelpText>
    <label>Last Funding Round Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>