force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Last_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Last_Mentioned__c</fullName>
    <description>Last time we found a press release/article mentioning that contact.</description>
    <inlineHelpText>Last time we found a press release/article mentioning that contact.</inlineHelpText>
    <label>Last Mentioned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>