force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Last_Name__c</fullName>
    <description>Last name of person.</description>
    <inlineHelpText>Last name of person.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>