force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Last_Updated_Date__c</fullName>
    <description>ZoomInfo last verified date of employment details.</description>
    <inlineHelpText>ZoomInfo last verified date of employment details.</inlineHelpText>
    <label>Last Updated Date</label>
    <type>DateTime</type>
</CustomField>