force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Lead__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Lookup Field.</description>
    <inlineHelpText>Lead Lookup Field.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>ZoomInfo Records</relationshipLabel>
    <relationshipName>ZoomInfo_Records</relationshipName>
    <type>Lookup</type>
</CustomField>