force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Malformed_Email__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Malformed_Email__c</fullName>
    <description>Indicates if ZoomInfo recognizes and email address input value is malformed and does not follow the xyz@domainCom syntax.</description>
    <inlineHelpText>Indicates if ZoomInfo recognizes and email address input value is malformed and does not follow the xyz@domainCom syntax.</inlineHelpText>
    <label>Malformed Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>