force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Management_Level__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Management_Level__c</fullName>
    <description>A person&apos;s management level.</description>
    <inlineHelpText>A person&apos;s management level.</inlineHelpText>
    <label>Management Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>