force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__NAICS_Code__c</fullName>
    <description>Four-digit numerical codes assigned by the US government to business establishments to identify the primary business of the establishment.</description>
    <inlineHelpText>Four-digit numerical codes assigned by the US government to business establishments to identify the primary business of the establishment.</inlineHelpText>
    <label>NAICS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>