force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__No_Match_Reason__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__No_Match_Reason__c</fullName>
    <description>Reason why ZoomInfo was not able to match- only pushed when there is 1) Opt-Out , 2) Master Data suppression List or 3) Restricted Dataset access.</description>
    <inlineHelpText>Reason why ZoomInfo was not able to match- only pushed when there is 1) Opt-Out , 2) Master Data suppression List or 3) Restricted Dataset access.</inlineHelpText>
    <label>No-Match Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>