force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Normalized_First_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Normalized_First_Name__c</fullName>
    <description>ZoomInfo normalized first name based on input value.</description>
    <inlineHelpText>ZoomInfo normalized first name based on input value.</inlineHelpText>
    <label>Normalized First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>