force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Number_of_Locations__c</fullName>
    <description>Number of office locations associated with a company.</description>
    <inlineHelpText>Number of office locations associated with a company.</inlineHelpText>
    <label>Number of Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>