force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Parent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Parent_Company_Name__c</fullName>
    <description>Name of parent company of requested company.</description>
    <inlineHelpText>Name of parent company of requested company.</inlineHelpText>
    <label>Parent Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>