force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Parent_Company_ZoomInfo_ID__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Parent_Company_ZoomInfo_ID__c</fullName>
    <description>Unique identifier of parent company of requested company.</description>
    <inlineHelpText>Unique identifier of parent company of requested company.</inlineHelpText>
    <label>Parent Company ZoomInfo ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>