force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Past_2_Year_Employee_Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Past_2_Year_Employee_Growth_Rate__c</fullName>
    <description>Approximate company employee growth percentage in the past 2 year.</description>
    <inlineHelpText>Approximate company employee growth percentage in the past 2 year.</inlineHelpText>
    <label>Past 2 Year Employee Growth Rate</label>
    <length>5</length>
    <type>Text</type>
</CustomField>