force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Person_Has_Moved__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Person_Has_Moved__c</fullName>
    <description>Indicates ZoomInfo recognizes the person company input value does not match ZoomInfo current company but does match known employment history.</description>
    <inlineHelpText>Indicates ZoomInfo recognizes the person company input value does not match ZoomInfo current company but does match known employment history.</inlineHelpText>
    <label>Person Has Moved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>