force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Person_LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Person_LinkedIn_URL__c</fullName>
    <description>Url of the person profile within linkedin.</description>
    <inlineHelpText>Url of the person profile within linkedin.</inlineHelpText>
    <label>Person LinkedIn URL</label>
    <type>Url</type>
</CustomField>