force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Person_Looks_like_EU__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Person_Looks_like_EU__c</fullName>
    <description>Inferred person European Union geographic region designation.</description>
    <inlineHelpText>Inferred person European Union geographic region designation.</inlineHelpText>
    <label>Person Looks like EU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>