force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Primary_Industry__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Primary_Industry__c</fullName>
    <description>Top level industry.</description>
    <inlineHelpText>Top level industry.</inlineHelpText>
    <label>Primary Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>