force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Primary_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Primary_Sub_Industry__c</fullName>
    <description>Second level industry.</description>
    <inlineHelpText>Second level industry.</inlineHelpText>
    <label>Primary Sub-Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>