force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Products_and_Services__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Products_and_Services__c</fullName>
    <description>This is a lookup to a third party database we work with to find what other products or services that company many have, not listed in ZoomInfo.</description>
    <inlineHelpText>This is a lookup to a third party database we work with to find what other products or services that company many have, not listed in ZoomInfo.</inlineHelpText>
    <label>Products and Services</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>