force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Ranking__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Ranking__c</fullName>
    <description>Company ranking list (e.g., Fortune 500 and so on).</description>
    <inlineHelpText>Company ranking list (e.g., Fortune 500 and so on).</inlineHelpText>
    <label>Ranking</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>