force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Revenue__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Revenue__c</fullName>
    <description>Estimated annual revenue.</description>
    <inlineHelpText>Estimated annual revenue.</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>