force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Revenue_Range__c</fullName>
    <description>Estimated range of annual revenue.</description>
    <inlineHelpText>Estimated range of annual revenue.</inlineHelpText>
    <label>Revenue Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>