force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Ticker__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Ticker__c</fullName>
    <description>Stock ticker for the company.</description>
    <inlineHelpText>Stock ticker for the company.</inlineHelpText>
    <label>Ticker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>