force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Twitter_Followers__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Twitter_Followers__c</fullName>
    <description>Number of Twitter followers.</description>
    <inlineHelpText>Number of Twitter followers.</inlineHelpText>
    <label>Twitter Followers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>