force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Ultimate_Parent_Company_ZoomInfo_ID__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Ultimate_Parent_Company_ZoomInfo_ID__c</fullName>
    <description>Unique identifier for ultimate parent company that has acquired requested company.</description>
    <inlineHelpText>Unique identifier for ultimate parent company that has acquired requested company.</inlineHelpText>
    <label>Ultimate Parent Company ZoomInfo ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>