force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Within_EU__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Within_EU__c</fullName>
    <description>European union geographic region designation.</description>
    <inlineHelpText>European union geographic region designation.</inlineHelpText>
    <label>Within EU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>