force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__ZoomInfo_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Contact_ID__c</fullName>
    <description>Internal ID number of the matching ZoomInfo person profile.</description>
    <inlineHelpText>Internal ID number of the matching ZoomInfo person profile.</inlineHelpText>
    <label>ZoomInfo Contact ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>