force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__ZoomInfo_Enrich_Status__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
    <description>Enrich Status for the record - Enriched/No-Match etc.</description>
    <inlineHelpText>Enrich Status for the record - Enriched/No-Match etc.</inlineHelpText>
    <label>ZoomInfo Enrich Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>